test/samples/invalid/consts_unordered.invalid.sol
/// #const uint256 X := Y * 100;
/// #const uint256 Y := 5;
contract InvalidConstantsOrder {}
